# fetchmail

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  COPYING  INSTALL  Makefile.am  NEWS  README  README.OAUTH2  README.PWMD  README.SSL  README.SSL-SERVER  README.git  README.maintainer  README.packaging  RELEASE-INSTRUCTIONS  RELEASEVERSIONS  TODO.txt  base64.c  build-pwmd.sh  checkalias.c  conf.c  config.h.cmake.in  config.h.meson  configure.ac  cram.c  daemon.c  design-notes.html  driver.c  env.c  esrs-design-notes.html  etrn.c  fetchmail-FAQ.html  fetchmail-SA-2021-01.txt  fetchmail-SA-2021-02.txt  fetchmail-features.html  fetchmail.c  fetchmail.h  fetchmail.man  fetchmailconf.in  (+46 more)
contrib/: README  fetchmail-mode.el  fetchmail-oauth2.py  oauth2-example-google  oauth2-example-microsoft  runfetchmail
contrib/systemd/: fetchmail.service
dist-tools/: getstats.py  git-commit-po-updates.sh  htmldoc  makerelease.pl  translators.sh
po/: LINGUAS  POTFILES.in  ca.po  cs.po  da.po  de.po  de.po.orig  el.po  en_GB.po  eo.po  es.po  fi.po  fr.po  gl.po  id.po  it.po  ja.po  meson.build  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sq.po  sr.po  sv.po  tr.po  vi.po  zh_CN.po
website/: fetchmail-SA-2021-01.txt  fetchmail-SA-2021-02.txt  index.html  multidrop.de.html  multidrop.html  security.html
website/host-scripts/: upload-website.sh
